apps/podcasts/bluey/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: podcasts
  name: podcasts
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: podcasts
  type: ClusterIP
