apps/podcasts/bluey/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: podcasts
  namespace: podcasts
spec:
  ingressClassName: nginx
  rules:
    - host: podcasts.babyvelociraptor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podcasts
                port:
                  name: web
